- Fix bug: crash on doing "pkg install" from the command line
  when the window listing function packages on the server is
  displayed at the time
- Fix bug: possible false positive when checking for duplicate
  function packages
- Fix for detection of the R executable when called via a
  foreign block on macOS
- macOS build: include TargetConditionals.h in libgretl.h

2022-11-01 version 2022c
- substantial speed-up for hansl functions called from loops
  or other iterative contexts
- lists and strings: support vector selection of elements
- "printf" command: support a named string variable as the
  "format" argument
- "ols" command with --jackknife option: make the output more
  specific, and complain when this option is not applicable
- "panplot" command: add --single-yaxis option, and support
  the addition of "literal" supplementary gnuplot commands
  (but not when the --grid or --stack option is selected)
- "append" and "join" commands: support the --frompkg option,
  as for the "open" command
- toepsolv() function: add fourth argument for returning the
  determinant
- flatten() function for arrays of strings: add the ability to
  specify a custom separator
- strsub() function help: note that an array of strings can be
  given as the first argument
- instring() and strstr() functions: add optional parameter
  for case-insensitive search
- gretl_edit: enable auto-completion, add some specialized
  "developer" options, and add a "kill" button to stop script
  execution
- script editor: add hide/show functionality for selected
  regions in a hansl script
- script editor, "Help on command": disambiguate cases where
  we have a command and a function of the same name
- regls addon: plotting enhancements; document GUI usage
- geoplot addon: start adding support for encoded data
- Clarify and properly enforce the case where the "const"
  property of a hansl function argument must be inherited
- Fix and speed up reading of gretl's binary matrix files via